nuevo estilo tabla detalle-profesor

--- a/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
@@ -54,12 +54,9 @@
                     ${calificacionPendientesModelo.tareasAsignadas}
                 </h:column>
                 <h:column>
-                    <f:facet name="header">pendientes por calificar mapa mental</f:facet>
-                    ${calificacionPendientesModelo.pendientesMapaMental}
-                </h:column>
-                <h:column>
-                    <f:facet name="header">pendientes por calificar word game</f:facet>
-                    ${calificacionPendientesModelo.pendientesGramatica}
+                    <f:facet name="header">pendientes por calificar </f:facet>
+                    <p style="margin: 0">Think-Develop and Share: ${calificacionPendientesModelo.pendientesMapaMental}</p>
+                    <p style="margin: 0">Word Game: ${calificacionPendientesModelo.pendientesGramatica}</p>
                 </h:column>
                 <h:column>
                     <f:facet name="header">Tareas</f:facet>
