En la vista de 500, si existe la sesion, la redirecciona dashboard, si no a landing

--- a/tecolotl-web/src/main/webapp/error/no-manejable.xhtml
+++ b/tecolotl-web/src/main/webapp/error/no-manejable.xhtml
@@ -10,6 +10,7 @@
 </h:head>
 <h:body>
     Estimado usuario, por el momento no podemos atender su petición, favor de intentar más tarde
-    <button onclick="window.history.back()">#{boton['back']}</button>
+    <ui:remove><button onclick="window.history.back()">#{boton['back']}</button></ui:remove>
+    <h:button value="#{boton['back']}" outcome="regresar"/>
 </h:body>
 </html>
