--- a/tecolotl-web/src/main/webapp/coordinador/reporte-sesion.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/reporte-sesion.xhtml
@@ -116,7 +116,7 @@
                     </h:column>
                     <h:column>
                         <h:outputText value="${profesorModelo.momento}">
-                            <f:convertDateTime pattern="hh:mm:ss"/>
+                            <f:convertDateTime pattern="HH:mm:ss"/>
                         </h:outputText>
                     </h:column>
 
