--- a/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
@@ -34,7 +34,7 @@
                 <div>
                     <p class="uk-text-bold">${detalleProfesorControlador.profesorModelo.nombre} ${detalleProfesorControlador.profesorModelo.apellidoPaterno} ${detalleProfesorControlador.profesorModelo.apellidoMaterno}</p>
                     <p class="uk-text-muted uk-text-small uk-text-bold">${detalleProfesorControlador.profesorModelo.apodo}</p>
-                    <p class="uk-text-bold">${detalleProfesorControlador.profesorModelo.correoEletronico}</p>
+                    <p class="uk-text-muted uk-text-small">${detalleProfesorControlador.profesorModelo.correoEletronico}</p>
                 </div>
             </div>
             <h:form id="formulario-detalle-grupo">
@@ -56,8 +56,8 @@
                 </h:column>
                 <h:column>
                     <f:facet name="header">pendientes por calificar </f:facet>
-                    <p style="margin: 0">Think-Develop and Share: ${calificacionPendientesModelo.pendientesMapaMental}</p>
-                    <p style="margin: 0">Word Game: ${calificacionPendientesModelo.pendientesGramatica}</p>
+                    <p style="margin: 0; display: flex; justify-content: space-between;">Think-Develop and Share: <span>${calificacionPendientesModelo.pendientesMapaMental}</span></p>
+                    <p style="margin: 0; display: flex; justify-content: space-between;">Word Game: <span>${calificacionPendientesModelo.pendientesGramatica}</span></p>
                 </h:column>
                 <h:column>
                     <f:facet name="header">Tareas</f:facet>
@@ -124,8 +124,9 @@
                     <button class="uk-icon-button" uk-icon="more-vertical"/>
                     <h:panelGroup layout="block" styleClass="uk-dropdown uk-text-primary" pt:uk-dropdown="mode: click; boundary: .uk-table">
                         <ul class="uk-nav uk-dropdown-nav">
-                            <li>
+                            <li class="uk-text-left">
                                 <h:commandLink onclick="evt(this);">
+                                    <h:outputText  styleClass="uk-icon uk-margin-small-right uk-text-primary" pt:uk-icon="file-edit"/>
                                     <span>#{etiqueta['detail']}</span>
                                     <f:ajax render="formulario-alumno"
                                             listener="#{detalleProfesorControlador.buscaAlumno(calificacionPendientesModelo.idGrupo)}"
@@ -152,7 +153,7 @@
             </h:dataTable>
             </h:form>
             <div>
-                <h4 class="titulo-grupo">Grupo: <span>sin grupo</span></h4>
+                <h4 class="titulo-grupo">Grupo: <span>no seleccionado</span></h4>
                 <h:form id="formulario-alumno">
                     <h:panelGroup layout="block"
                                   rendered="#{empty detalleProfesorControlador.promedioAlumnoModeloLista}">
